--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AjaxMin" version="5.14.5506.26202" targetFramework="net472" />
+  <package id="EntityFramework" version="6.3.0" targetFramework="net472" />
+  <package id="GMap.NET.Core" version="2.0.0" targetFramework="net472" />
+  <package id="GMap.NET.WindowsForms" version="1.7.5" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net472" />
   <package id="Microsoft.Bcl.HashCode" version="1.1.0" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
@@ -28,8 +32,10 @@
   <package id="Microsoft.Identity.Client" version="3.0.8" targetFramework="net472" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net472" />
   <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1000" targetFramework="net472" />
+  <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net472" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="Remotion.Linq" version="2.1.1" targetFramework="net472" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net472" />
@@ -40,6 +46,10 @@
   <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net472" />
   <package id="System.Console" version="4.3.0" targetFramework="net472" />
   <package id="System.Data.Common" version="4.3.0" targetFramework="net472" />
+  <package id="System.Data.SQLite" version="1.0.112.0" targetFramework="net472" />
+  <package id="System.Data.SQLite.Core" version="1.0.112.0" targetFramework="net472" />
+  <package id="System.Data.SQLite.EF6" version="1.0.112.0" targetFramework="net472" />
+  <package id="System.Data.SQLite.Linq" version="1.0.112.0" targetFramework="net472" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.7.0" targetFramework="net472" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net472" />
